@@ -18,17 +18,17 @@
 
 package org.apache.cassandra.sidecar.db.schema;
 
-import java.util.concurrent.atomic.AtomicLong;
-
 import com.google.common.annotations.VisibleForTesting;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.datastax.driver.core.Session;
+import io.vertx.core.Promise;
 import io.vertx.core.Vertx;
 import io.vertx.core.eventbus.EventBus;
 import org.apache.cassandra.sidecar.common.server.CQLSessionProvider;
-import org.apache.cassandra.sidecar.concurrent.ExecutorPools;
+import org.apache.cassandra.sidecar.common.server.utils.DurationSpec;
+import org.apache.cassandra.sidecar.common.server.utils.MillisecondBoundConfiguration;
 import org.apache.cassandra.sidecar.config.SchemaKeyspaceConfiguration;
 import org.apache.cassandra.sidecar.config.SidecarConfiguration;
 import org.apache.cassandra.sidecar.coordination.ClusterLease;
@@ -36,9 +36,11 @@ import org.apache.cassandra.sidecar.coordination.ExecuteOnClusterLeaseholderOnly
 import org.apache.cassandra.sidecar.exceptions.CassandraUnavailableException;
 import org.apache.cassandra.sidecar.exceptions.SidecarSchemaModificationException;
 import org.apache.cassandra.sidecar.metrics.SchemaMetrics;
+import org.apache.cassandra.sidecar.tasks.PeriodicTask;
+import org.apache.cassandra.sidecar.tasks.PeriodicTaskExecutor;
+import org.apache.cassandra.sidecar.tasks.ScheduleDecision;
 
 import static org.apache.cassandra.sidecar.server.SidecarServerEvents.ON_CASSANDRA_CQL_READY;
-import static org.apache.cassandra.sidecar.server.SidecarServerEvents.ON_SERVER_STOP;
 import static org.apache.cassandra.sidecar.server.SidecarServerEvents.ON_SIDECAR_SCHEMA_INITIALIZED;
 
 /**
@@ -47,13 +49,12 @@ import static org.apache.cassandra.sidecar.server.SidecarServerEvents.ON_SIDECAR
 public class SidecarSchema
 {
     private static final Logger LOGGER = LoggerFactory.getLogger(SidecarSchema.class);
-    protected static final long INITIALIZATION_LOOP_DELAY_MILLIS = 1000;
+    protected static final DurationSpec INITIALIZATION_LOOP_DELAY = MillisecondBoundConfiguration.parse("1s");
 
     private final Vertx vertx;
-    private final ExecutorPools executorPools;
+    private final PeriodicTaskExecutor periodicTaskExecutor;
     private final SchemaKeyspaceConfiguration schemaKeyspaceConfiguration;
     private final SidecarInternalKeyspace sidecarInternalKeyspace;
-    private final AtomicLong initializationTimerId = new AtomicLong(-1L);
     private final CQLSessionProvider cqlSessionProvider;
     private final SchemaMetrics metrics;
     private final ClusterLease clusterLease;
@@ -61,7 +62,7 @@ public class SidecarSchema
     private boolean isInitialized = false;
 
     public SidecarSchema(Vertx vertx,
-                         ExecutorPools executorPools,
+                         PeriodicTaskExecutor periodicTaskExecutor,
                          SidecarConfiguration config,
                          SidecarInternalKeyspace sidecarInternalKeyspace,
                          CQLSessionProvider cqlSessionProvider,
@@ -69,7 +70,7 @@ public class SidecarSchema
                          ClusterLease clusterLease)
     {
         this.vertx = vertx;
-        this.executorPools = executorPools;
+        this.periodicTaskExecutor = periodicTaskExecutor;
         this.schemaKeyspaceConfiguration = config.serviceConfiguration().schemaKeyspaceConfiguration();
         this.sidecarInternalKeyspace = sidecarInternalKeyspace;
         this.cqlSessionProvider = cqlSessionProvider;
@@ -88,29 +89,19 @@ public class SidecarSchema
     private void configureSidecarServerEventListeners()
     {
         EventBus eventBus = vertx.eventBus();
-
-        eventBus.localConsumer(ON_CASSANDRA_CQL_READY.address(), message -> startSidecarSchemaInitializer());
-        eventBus.localConsumer(ON_SERVER_STOP.address(), message -> cancelTimer(initializationTimerId.get()));
+        eventBus.localConsumer(ON_CASSANDRA_CQL_READY.address(), message -> maybeStartSidecarSchemaInitializer());
     }
 
     @VisibleForTesting
-    public void startSidecarSchemaInitializer()
+    public void maybeStartSidecarSchemaInitializer()
     {
-        if (!schemaKeyspaceConfiguration.isEnabled() || sidecarInternalKeyspace == null)
-            return;
-
-        // schedule one initializer exactly
-        if (!initializationTimerId.compareAndSet(-1L, 0L))
+        if (!schemaKeyspaceConfiguration.isEnabled())
         {
-            LOGGER.debug("Skipping starting the sidecar schema initializer because there is an initialization " +
-                         "in progress with timerId={}", initializationTimerId);
             return;
         }
 
-        // loop initialization until initialized
-        long timerId = executorPools.internal()
-                                    .setPeriodic(INITIALIZATION_LOOP_DELAY_MILLIS, this::initialize);
-        initializationTimerId.set(timerId);
+        // periodicTaskExecutor guarantees there is one initializer scheduled exactly
+        periodicTaskExecutor.schedule(new SidecarSchemaInitializer());
     }
 
     public boolean isInitialized()
@@ -124,61 +115,6 @@ public class SidecarSchema
         {
             throw new IllegalStateException("Sidecar schema is not initialized!");
         }
-    }
-
-    protected synchronized void initialize(long timerId)
-    {
-        // it should not happen since the callback is only scheduled when isEnabled == true
-        if (!schemaKeyspaceConfiguration.isEnabled())
-        {
-            LOGGER.debug("Sidecar schema is not enabled");
-            return;
-        }
-
-        if (isInitialized())
-        {
-            LOGGER.debug("Sidecar schema is already initialized!");
-            cancelTimer(timerId);
-            return;
-        }
-
-        try
-        {
-            Session session = cqlSessionProvider.get();
-            isInitialized = sidecarInternalKeyspace.initialize(session, this::shouldCreateSchema);
-
-            if (isInitialized())
-            {
-                LOGGER.info("Sidecar schema is initialized");
-                cancelTimer(timerId);
-                reportSidecarSchemaInitialized();
-            }
-        }
-        catch (CassandraUnavailableException ignored)
-        {
-            LOGGER.debug("Cql session is not yet available. Skip initializing...");
-        }
-        catch (Exception ex)
-        {
-            LOGGER.warn("Failed to initialize schema", ex);
-            if (ex instanceof SidecarSchemaModificationException)
-            {
-                LOGGER.warn("Failed to modify schema", ex);
-                metrics.failedModifications.metric.update(1);
-            }
-            metrics.failedInitializations.metric.update(1);
-        }
-    }
-
-    protected synchronized void cancelTimer(long timerId)
-    {
-        // invalid timerId; nothing to cancel
-        if (timerId < 0)
-        {
-            return;
-        }
-        initializationTimerId.compareAndSet(timerId, -1L);
-        executorPools.internal().cancelTimer(timerId);
     }
 
     protected void reportSidecarSchemaInitialized()
@@ -202,5 +138,60 @@ public class SidecarSchema
             return clusterLease.isClaimedByLocalSidecar();
         }
         return true;
+    }
+
+    /**
+     * Initializer that retries until sidecar schema is initialized. Once initialized, it un-schedules itself.
+     */
+    private class SidecarSchemaInitializer implements PeriodicTask
+    {
+        @Override
+        public ScheduleDecision scheduleDecision()
+        {
+            if (cqlSessionProvider.getIfConnected() == null)
+            {
+                LOGGER.debug("CQL connection is not yet established. Skip this run of initialization.");
+                return ScheduleDecision.SKIP;
+            }
+            return ScheduleDecision.EXECUTE;
+        }
+
+        @Override
+        public DurationSpec delay()
+        {
+            return INITIALIZATION_LOOP_DELAY;
+        }
+
+        @Override
+        public void execute(Promise<Void> promise)
+        {
+            try
+            {
+                Session session = cqlSessionProvider.get();
+                isInitialized = sidecarInternalKeyspace.initialize(session, SidecarSchema.this::shouldCreateSchema);
+
+                if (isInitialized)
+                {
+                    LOGGER.info("Sidecar schema is initialized. Stopping SchemaSidecarInitializer");
+                    periodicTaskExecutor.unschedule(this);
+                    reportSidecarSchemaInitialized();
+                }
+            }
+            catch (Exception ex)
+            {
+                LOGGER.warn("Failed to initialize schema. Retry in {}", delay(), ex);
+                if (ex instanceof CassandraUnavailableException) // not quite expected here according to the schedule decision, but still check for it
+                {
+                    return; // do not count Cassandra unavailable as failure
+                }
+                else if (ex instanceof SidecarSchemaModificationException)
+                {
+                    LOGGER.warn("Failed to modify schema", ex);
+                    metrics.failedModifications.metric.update(1);
+                }
+                metrics.failedInitializations.metric.update(1);
+            }
+            promise.tryComplete();
+        }
     }
 }
