@@ -38,7 +38,6 @@ import io.vertx.core.Vertx;
 import io.vertx.junit5.VertxTestContext;
 import org.apache.cassandra.sidecar.TestModule;
 import org.apache.cassandra.sidecar.common.server.CQLSessionProvider;
-import org.apache.cassandra.sidecar.concurrent.ExecutorPools;
 import org.apache.cassandra.sidecar.config.SidecarConfiguration;
 import org.apache.cassandra.sidecar.coordination.ClusterLease;
 import org.apache.cassandra.sidecar.db.SidecarSchemaTest;
@@ -47,6 +46,7 @@ import org.apache.cassandra.sidecar.db.schema.SidecarSchema;
 import org.apache.cassandra.sidecar.exceptions.SidecarSchemaModificationException;
 import org.apache.cassandra.sidecar.server.MainModule;
 import org.apache.cassandra.sidecar.server.Server;
+import org.apache.cassandra.sidecar.tasks.PeriodicTaskExecutor;
 
 import static org.apache.cassandra.sidecar.utils.TestMetricUtils.registry;
 import static org.apache.cassandra.testing.utils.AssertionUtils.loopAssert;
@@ -99,7 +99,7 @@ class SchemaMetricsTest
     @Test
     void testSchemaModificationFailure()
     {
-        sidecarSchema.startSidecarSchemaInitializer();
+        sidecarSchema.maybeStartSidecarSchemaInitializer();
         loopAssert(3, () -> {
             assertThat(metrics.server().schema().failedInitializations.metric.getValue())
             .isGreaterThanOrEqualTo(1);
@@ -118,13 +118,14 @@ class SchemaMetricsTest
             CQLSessionProvider cqlSession = mock(CQLSessionProvider.class);
             Session session = mock(Session.class);
             when(cqlSession.get()).thenReturn(session);
+            when(cqlSession.getIfConnected()).thenReturn(session);
             return cqlSession;
         }
 
         @Provides
         @Singleton
         public SidecarSchema sidecarSchema(Vertx vertx,
-                                           ExecutorPools executorPools,
+                                           PeriodicTaskExecutor periodicTaskExecutor,
                                            SidecarConfiguration configuration,
                                            CQLSessionProvider cqlSessionProvider,
                                            SidecarMetrics metrics)
@@ -134,7 +135,7 @@ class SchemaMetricsTest
             .thenThrow(new SidecarSchemaModificationException("Simulated failure",
                                                               new RuntimeException("Simulated exception")));
             SchemaMetrics schemaMetrics = metrics.server().schema();
-            return new SidecarSchema(vertx, executorPools, configuration,
+            return new SidecarSchema(vertx, periodicTaskExecutor, configuration,
                                      sidecarInternalKeyspace, cqlSessionProvider, schemaMetrics, null);
         }
 
